[package]
name = "graphwalks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokenizers = "0.21"
rayon = "1"
indicatif = "0.17"

arrow = "54"
parquet = { version = "54", features = ["arrow"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
regex = "1.12.4"
futures = "0.3.32"
